<resources>
    <string name="app_name">Weatherapp</string>
    <string name="position" translatable="false">position</string>
    <string name="explore">Show Me</string>

    <string name="today">Today</string>
    <string name="humidity">Humidity</string>
    <string name="next_5_days">Next 5 Days</string>
    <string name="search">Search</string>
    <string name="start_typing">Start typing for find your location…</string>

    <string name="unexpected_exception" />
    <string name="txt_500_error">Status code : 500 Internal server error!</string>
    <string name="date_time_sample">Wed, 31 September</string>
    <string name="temp_sample">666</string>
    <string name="sample_time">14:00</string>
    <string name="sample_temprature">23°</string>
    <string name="sample_weather"><![CDATA[Clouds & Sun]]></string>
</resources>
