<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sudhakar.app.weatherapp.ui.dashboard.DashboardFragmentViewModel" />

        <variable
            name="viewState"
            type="com.sudhakar.app.weatherapp.ui.dashboard.ForecastViewState" />
    </data>

    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        tools:context=".ui.dashboard.DashboardFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:checkable="false"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/today"
                    android:textColor="@color/chipTextColor"
                    app:chipBackgroundColor="@color/chipItemBackgroundColor" />

                <include
                    android:id="@+id/container_forecast"
                    layout="@layout/layout_dashboard_forecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/chipToday"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginBottom="32dp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:visibility="@{viewState.isLoading()}" />

                <TextView
                    android:id="@+id/textViewForecastHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/container_forecast"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:text="@string/next_5_days"
                    android:textColor="@color/mainTextColor"
                    android:textSize="@dimen/text_size_19sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewForecastHeader"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:orientation="vertical"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_forecast" />
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@android:color/holo_red_light"
            app:cardCornerRadius="@dimen/dimen_1dp"
            app:cardElevation="@dimen/dimen_16dp"
            app:setErrorView="@{viewState}"
            app:strokeColor="@android:color/holo_red_dark"
            app:strokeWidth="@dimen/dimen_2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableEnd="@android:drawable/stat_notify_error"
                android:paddingStart="@dimen/dimen_12dp"
                android:paddingTop="@dimen/dimen_8dp"
                android:paddingEnd="@dimen/dimen_24dp"
                android:paddingBottom="@dimen/dimen_8dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:setErrorText="@{viewState}"
                tools:text="@string/txt_500_error" />

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</layout>
